# flask-task

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
src/: app.py  blueprint_view.py  mkad_polygon.py
tests/: test_blueprint_view.py  test_http.py  test_mkad_polygon.py
